# minimal_cmake

./: CMakeLists.txt  Findminimal_lib.cmake.in  README.md  minimal_lib.pc.in
docs/: CMakeLists.txt  Doxyfile.in
include/minimal_lib/: CMakeLists.txt  minimal_lib.h
lib/: CMakeLists.txt  minimal_lib.cpp
qa/: CMakeLists.txt  qa_basic.cpp  qa_test.cpp
